--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField 'String', "PetFinderApiKey", PETFINDER_API_KEY
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -32,10 +35,18 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
 }
 
 dependencies {
+    def versions = [
+            okhttp3   : '4.7.2',
+            navigation: '2.3.2',
+            retrofit  : '2.9.0',
+            rxJava    : '3.0.4',
+            rxKotlin  : '3.0.0',
+            rxAndroid : '3.0.0',
+            rxAdapter : '3.0.0'
+    ]
 
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -43,12 +54,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    //Dagger
     implementation 'com.google.dagger:dagger:2.29.1'
     //Design
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
     // RecyclerView
     implementation 'androidx.recyclerview:recyclerview:1.2.0-beta01'
     // CircleImageView
@@ -56,25 +67,33 @@ dependencies {
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.exifinterface:exifinterface:1.3.2'
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:${versions.retrofit}"
+    implementation "com.squareup.retrofit2:converter-gson:${versions.retrofit}"
+    //OkHttp
+    implementation "com.squareup.okhttp3:logging-interceptor:${versions.okhttp3}"
+    implementation "com.squareup.okhttp3:mockwebserver:${versions.okhttp3}"
+
+    //RxJava
+    implementation "io.reactivex.rxjava3:rxjava:${versions.rxJava}"
+    implementation "io.reactivex.rxjava3:rxandroid:${versions.rxAndroid}"
+    implementation "io.reactivex.rxjava3:rxkotlin:${versions.rxKotlin}"
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:${versions.rxAdapter}"
 
     // Navigation dependencies
-    def nav_version = "2.3.2"
-
-    // Java language implementation
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:${versions.navigation}"
+    implementation "androidx.navigation:navigation-ui-ktx:${versions.navigation}"
 
     // Kotlin
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:${versions.navigation}"
+    implementation "androidx.navigation:navigation-ui-ktx:${versions.navigation}"
     implementation "androidx.collection:collection-ktx:1.1.0"
 
-
     // Feature module Support
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:${versions.navigation}"
 
     // Testing Navigation
-    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+    androidTestImplementation "androidx.navigation:navigation-testing:${versions.navigation}"
 
     // Jetpack Compose Integration
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha04"
