--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,53 @@
-*.iml
-*.iws
-/.gradle
+# Built application files
+*.apk
+*.ap_
+*.aab
+
+# Files for the ART/Dalvik VM
+*.dex
+
+# Java class files
+*.class
+
+# Generated files
+bin/
+gen/
+out/
+
+# Gradle files
+.gradle/
+build/
+app/build/
+# Here depending on your project you might need to include more build direcories
+
+# Local configuration file (sdk path, etc)
 local.properties
-/.idea
-.idea/libraries
-.idea/tasks.xml
-.idea/vcs.xml
+
+# Log Files
+*.log
+
+# Android Studio Navigation editor temp files
+.navigation/
+
+# Android Studio captures folder
+captures/
+
+# IntelliJ
+*.iml
 .idea/workspace.xml
-.DS_Store
-build
-captures
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/assetWizardSettings.xml
+.idea/dictionaries
+.idea/libraries
+.idea/caches
+
+# Keystore files
+*.jks
+*.keystore
+
+# External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
+
+# OSX_files
+.DS_Store
